[package]
name = "xmrt-mesh"
version = "0.1.0"
edition = "2021"
description = "XMRT DAO Gossipsub Mesh Layer"
authors = ["XMRT DAO Fleet"]

[dependencies]
libp2p = { version = "0.55", features = [
    "gossipsub",
    "tcp",
    "mdns",
    "tokio",
    "macros",
    "noise",
    "yamux"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
